@@ -1505,6 +1505,11 @@ i[34567]86-*-freebsd*)
 x86_64-*-freebsd*)
 	tm_file="${tm_file} i386/unix.h i386/att.h dbxelf.h elfos.h ${fbsd_tm_file} i386/x86-64.h i386/freebsd.h i386/freebsd64.h"
 	;;
+i[34567]86-*-hipperos*)
+	# We do not use i386/i386elf.h. It is replaced by i386/hipperos.h to avoid
+	# warnings during the compilation.
+	tm_file="${tm_file} i386/unix.h i386/att.h dbxelf.h elfos.h ${hipperos_tm_file} i386/hipperos.h"
+	;;
 i[34567]86-*-netbsdelf*)
 	tm_file="${tm_file} i386/unix.h i386/att.h dbxelf.h elfos.h netbsd.h netbsd-stdint.h netbsd-elf.h i386/netbsd-elf.h"
 	extra_options="${extra_options} netbsd.opt netbsd-elf.opt"
